login-form-done

--- a/Implementataion/Pages/Authform.html
+++ b/Implementataion/Pages/Authform.html
@@ -1,24 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../Css/Authform.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-</head>
-<body>
-        <div class="main">
-            <div class="main-card"> 
-                <div class="card-img">
-                        <img src="../assests/authimg.jpg" alt="heelo ">
-                </div>
-                <div class="card-form">
-                    <h3>Welcome</h3>
+    <link rel="stylesheet" href="../Css/Authform.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"/>
+  </head>
+  <body>
+    <div class="main">
+      <div class="main-card">
+        <div class="card-img"></div>
+        <div class="card-form">
+          <h3>Welcome</h3>
+          <div class="form-control">
+            <p class="logintext" onclick="toggle('log-form')">Login</p>
+            <p class="registertext" onclick="toggle('reg-form')">Register</p>
+          </div>
+          <div class="log-form">
+            <form class="form" action="">
+              <p>Username</p>
+              <input type="text" placeholder="Enter your Name" />
+              <p>Password</p>
+              <input type="text" placeholder="Enter your Password" />
+              <div class="form-btn">
+                <button>Login</button>
+              </div>
+            </form>
+            <div class="form-footer">
+              <p>Continue with</p>
+              <div class="footer-img">
+                <img src="/assests/google.png" alt="" srcset="" />
+                <img src="/assests/facebook.png" alt="" srcset="" />
+                <img src="/assests/apple.png" alt="" srcset="" />
+              </div>
             </div>
+          </div>
+          <div class="reg-form">
+            <form action="" >
+              <h1>Register</h1>
+            </form>
+          </div>
         </div>
-        </div>
-</body>
+      </div>
+    </div>
+  </body>
 </html>
+
+<script src="../Js/auth.js"></script>
