--- a/Implementataion/Pages/Authform.html
+++ b/Implementataion/Pages/Authform.html
@@ -42,7 +42,17 @@
           </div>
           <div class="reg-form">
             <form action="" >
-              <h1>Register</h1>
+              <p>Username</p>
+              <input type="text" placeholder="Enter your Name" />
+              <p>Email</p>
+              <input type="text" placeholder="Enter your Email" />
+              <p>Phone</p>
+              <input type="text" placeholder="Enter your Phone No" />
+              <p>Password</p>
+              <input type="text" placeholder="Enter your Password" />
+              <div class="form-btn">
+                <button>Register</button>
+              </div>
             </form>
           </div>
         </div>
