--- a/Implementataion/Pages/Authform.html
+++ b/Implementataion/Pages/Authform.html
@@ -28,7 +28,7 @@
               <p>Password</p>
               <input type="text" placeholder="Enter your Password" />
               <div class="form-btn">
-                <button>Login</button>
+                <button ><a href="Profilepage.html">Login</a></button>
               </div>
             </form>
             <div class="form-footer">
