--- a/Implementataion/Pages/Profilepage.html
+++ b/Implementataion/Pages/Profilepage.html
@@ -5,22 +5,21 @@
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../Css/profilepage.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header></header>
     <div class="main">
+        
         <div class="card">
             <div class="profile-pic">
-                <img src="../assests/boy.png" alt="">
-                <button>Upload Image</button>
-            </div>
+                <img id="profileImage" src="../assests/boy.png" >
+                <button onclick="uploadImage()">Upload Image</button>
+              </div>
             <div class="info">
-                <img src="../assests/pencil.png" alt="">
+               
                 <div class="infodata">
                     <div class="data">
                        <p>Username :</p>
@@ -29,18 +28,18 @@
                        <p>Password :</p>
                     </div>
                     <div class="userdata">
-                       <p>XYZ</p>
-                       <p>xyz@gmail.com</p>
-                       <p>0317-12345678</p>
-                       <p class="p">*******</p>
-                    </div>
+                       <p id="dataname">XYZ</p>
+                       <p id="datamail">xyz@gmail.com</p>
+                       <p id="dataphone">0317-12345678</p>
+                      <p id="datapass" onmouseover="unhidePassword()" onmouseleave="hidePassword()">*******</p>
+ </div>
                 </div>
         </div>
     <div class="activity">
         <button>
             <img src="../assests/history.png" alt="">
             History</button>
-        <button>
+        <button onclick="logout()">
             <img src="../assests/logout.png" alt="">
             Logout</button>
     </div>
@@ -50,3 +49,4 @@
     <footer></footer>
 </body>
 </html>
+<script src="../Js/profile.js"></script>
