--- a/Implementataion/index.html
+++ b/Implementataion/index.html
@@ -26,7 +26,7 @@
           <p>About</p>
         </div>
         <div class="signup">
-          <button>Login</button>
+          <button onclick="login_btn()">Login</button>
         </div>
       </nav>
     </header>
@@ -37,9 +37,8 @@
       </div>
      
       <div class="slideshow-container">
-
-        <!-- Full-width images with number and caption text -->
         <div class="mySlides fade"> 
+                <span class="loader"></span>
                   <img src="https://images.unsplash.com/photo-1590523277543-a94d2e4eb00b?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="img" style="width:100%">
         </div>
       
