Sidebar animation done

--- a/Implementataion/index.html
+++ b/Implementataion/index.html
@@ -22,6 +22,7 @@
       </div>
       <div class="nav_content">
         <p>Dicover</p>
+        <p onclick="toExcursion()">Excursion</p>
         <p>Reviews</p>
         <p>Contact</p>
         <p>About</p>
@@ -157,10 +158,11 @@
       <input type="text" id="searchInput" placeholder="Search" />
       <button id="searchButton">Search</button>
     </div>
+<div class="section">
 
-    <div id="hotelContainer"></div>
-    <div id="PlacesContainer"></div>
-    <div id="ResturantsContainer"></div>
+  <div id="hotelContainer"></div>
+  <div id="PlacesContainer"></div>
+  <div id="ResturantsContainer"></div>
     <div id="CurrencyConverter">
       <div class="maincard">
         <p class="heading">Currency Converter</p>
@@ -186,7 +188,8 @@
     <div id="RecommandationsContainer"></div>
     <div id="TransportationContainer"></div>
   </div>
-  </div>
+</div>
+</div>
   <footer></footer>
 </body>
 </html>
