--- a/Implementataion/Pages/excursion.html
+++ b/Implementataion/Pages/excursion.html
@@ -19,12 +19,7 @@
             <div class="head">
                 <img onclick="animatesidebar()" src="../assests/menu.png" alt="" sizes="" srcset="">
                 <h1 class="headtext">Excursion</h1>
-
-
             </div>
-
-
-
             <div class="sidebar-content">
                 <div class="content">
                     <div class="subcontent-img">
@@ -53,13 +48,11 @@
                         <p class="data">Flight Reservation</p>
                     </div>
                     <hr class="rounded">
-
                 </div>
                 <div class="content">
                     <div class="subcontent-img">
                         <img src="../assests/book.png" alt="">
                         <p class="data">Bus Reservation</p>
-
                     </div>
                     <hr class="rounded">
                 </div>
@@ -70,23 +63,18 @@
                     </div>
                     <hr class="rounded">
                 </div>
-
-
-
-
             </div>
-
         </div>
         <div class="body">
             <div class="navbar">
                 <div class="navlink">
-
-                    <p class="headtext">Voyage Timeline</p>
-                    <p class="headtext">Lodging arrangement</p>
-                    <p class="headtext">Moving means</p>
-                    <p class="headtext">Charge Calculation</p>
+                    <p class="headtext1">Voyage Timeline</p>
+                    <p class="headtext2">Lodging arrangement</p>
+                    <p class="headtext3">Moving means</p>
+                    <p class="headtext4">Charge Calculation</p>
                 </div>
             </div>
+            <div class="voyage">
             <div class="mainbody">
                 <div class="text">
                     <p> <span>Take off with us into</span> new adventure!</p>
@@ -141,7 +129,15 @@
                                     </div>
                                 </div>
                                 <div class="card-content">
+                                    <div class="section">
 
+                                        <div class="card-text">
+                                            <p>Seats</p>
+                                            <img class="card-img" src="../assests/airline.png"
+                                                style="height: 35px; width: 35px;">
+                                        </div>
+                                        <input type="number" placeholder="Enter number of seats">
+                                    </div>
                                     <div class="section">
 
                                         <div class="card-text">
@@ -218,7 +214,15 @@
                                     </div>
                                 </div>
                                 <div class="card-content">
+                                    <div class="section">
 
+                                        <div class="card-text">
+                                            <p>Seats</p>
+                                            <img class="card-img" src="../assests/airline.png"
+                                                style="height: 35px; width: 35px;">
+                                        </div>
+                                        <input type="number" placeholder="Enter number of seats">
+                                    </div>
                                     <div class="section">
 
                                         <div class="card-text">
@@ -299,7 +303,7 @@
                                     <div class="section">
 
                                         <div class="card-text">
-                                            <p>Company</p>
+                                            <p>Seats</p>
                                             <img class="card-img" src="../assests/airline.png"
                                                 style="height: 35px; width: 35px;">
                                         </div>
@@ -374,7 +378,15 @@
                                     </div>
                                 </div>
                                 <div class="card-content">
+                                    <div class="section">
 
+                                        <div class="card-text">
+                                            <p>Seats</p>
+                                            <img class="card-img" src="../assests/airline.png"
+                                                style="height: 35px; width: 35px;">
+                                        </div>
+                                        <input type="number" placeholder="Enter number of seats">
+                                    </div>
                                     <div class="section">
 
                                         <div class="card-text">
@@ -409,12 +421,24 @@
                             </div>
                         </div>
                         <div class="btn">
-                            <button>Next</button>
+                            <button onclick="state()">Next</button>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="lodging-arrangment">
+                <div class="mainbodi">
+                    <h1 style="color: black;">
+                     hello
+                    </h1>
+
+                </div>
+                <div class="btn">
+                    <button onclick="state()">Next</button>
+                </div>         
+            </div>
+                
 </body>
-
 </html>
-
 <script src="../Js/excursion.js"></script>
