--- a/Implementataion/Pages/excursion.html
+++ b/Implementataion/Pages/excursion.html
@@ -74,8 +74,8 @@
                     <p class="headtext4">Charge Calculation</p>
                 </div>
             </div>
-            <div class="voyage">
-            <div class="mainbody">
+
+            <div  id="voyage" class="mainbody">
                 <div class="text">
                     <p> <span>Take off with us into</span> new adventure!</p>
                     <p>Fly with us<span> Discover the World!</span> </p>
@@ -421,23 +421,38 @@
                             </div>
                         </div>
                         <div class="btn">
-                            <button onclick="state()">Next</button>
+                            <button id="nextBtn" onclick="state()">Next</button>
                         </div>
                     </div>
                 </div>
-            </div>
+</div>
+                <div  id="lodgeing" class="mainbody">
+                    <div class="text">
+                               <h1>lodgeing</h1>
+                            <div class="btn">
+                                <button id="nextBtn" onclick="state()">Next</button>
+                            </div>
+                        </div>
+                    </div>
 
-            <div class="lodging-arrangment">
-                <div class="mainbodi">
-                    <h1 style="color: black;">
-                     hello
-                    </h1>
+                <div  id="moving" class="mainbody">
+                    <div class="text">
+                               <h1>moving means</h1>
+                            <div class="btn">
+                                <button id="nextBtn" onclick="state()">Next</button>
+                            </div>
+                        </div>
+                    </div>
 
-                </div>
-                <div class="btn">
-                    <button onclick="state()">Next</button>
-                </div>         
-            </div>
+                    <div  id="calculation" class="mainbody">
+                        <div class="text">
+                                   <h1>Calculation Charge</h1>
+                                <div class="btn">
+                                    <button id="nextBtn" onclick="state()">Next</button>
+                                </div>
+                            </div>
+                        </div>
+            
                 
 </body>
 </html>
