aina ki farmaish done

--- a/Implementataion/index.html
+++ b/Implementataion/index.html
@@ -24,7 +24,7 @@
         <p>Dicover</p>
         <p onclick="toExcursion()">Excursion</p>
         <p>Reviews</p>
-        <p>Contact</p>
+        <p onclick="toContact()">Contact</p>
         <p>About</p>
       </div>
       <div class="signup">
@@ -35,98 +35,77 @@
       </div>
     </nav>
   </header>
-
   <div class="main">
     <div class="heading">
       <p>LET'S EXPLORE!</p>
     </div>
-
-    <div class="slideshow-container">
-      <div class="mySlides fade">
-        <img
-          src="https://images.unsplash.com/photo-1590523277543-a94d2e4eb00b?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
- 
-      <div class="mySlides fade">
-        
-        <img
-          src="https://images.unsplash.com/photo-1711563282291-dad9e67b0fd4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
-      <div class="mySlides fade">
-        
-        <img
-          src="https://images.unsplash.com/photo-1710453650585-05d2f4b966c4?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
-
-      <div class="mySlides fade">
-        <img
-          src="https://images.unsplash.com/photo-1606516397986-1eeb79e8c052?q=80&w=2064&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
-
-      <div class="mySlides fade">
-        <img
-          src="https://images.unsplash.com/photo-1621682372775-533449e550ed?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
-
-      <div class="mySlides fade">
-        <img
-          src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?q=80&w=2073&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
-
-      <div class="mySlides fade">
-        <span class="loader"></span>
-        <img
-          src="https://images.unsplash.com/photo-1614703185698-5bb9810638af?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
-
-      <div class="mySlides fade">
-        <img
-          src="https://images.unsplash.com/photo-1502208327471-d5dde4d78995?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
-
-      <div class="mySlides fade">
-        <img
-          src="https://images.unsplash.com/photo-1582523304083-bf6b0a48f195?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
-
-      <div class="mySlides fade">
-        <img
-          src="https://images.unsplash.com/photo-1610997186335-12de8a2dc7fd?q=80&w=2021&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
-
-      <div class="mySlides fade">
-        <img
-          src="https://plus.unsplash.com/premium_photo-1661955588369-b0d28de38b45?q=80&w=2071&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
-
-      <div class="mySlides fade">
-        <img
-          src="https://plus.unsplash.com/premium_photo-1671490808715-1135473e2ccb?q=80&w=1932&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
-
-      <div class="mySlides fade">
-        <img
-          src="https://images.unsplash.com/photo-1619029383069-21d494034ed7?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
-      </div>
-      <div class="mySlides fade">
-        <img
-          src="https://images.unsplash.com/photo-1543731068-7e0f5beff43a?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt="img" style="width:100%" loading="lazy">
+<div class="animated-cards">
+   <div class="cards">
+    <div class="cardcontent">
+      <img src="assests/location.png" >
+      <div class="text">
+        <p>Maldives</p>
       </div>
     </div>
+   </div>
+   <div class="cards1">
+    <div class="cardcontent">
+      <img src="assests/location.png" >
+      <div class="text">
+        <p>Maldives</p>
+      </div>
+    </div>
+   </div>
+
+   <div class="cards2">
+    <div class="cardcontent">
+      <img src="assests/location.png" >
+      <div class="text">
+        <p>Maldives</p>
+      </div>
+    </div>
+   </div>
+   <div class="cards3">
+    <div class="cardcontent">
+      <img src="assests/location.png" >
+      <div class="text">
+        <p>Maldives</p>
+      </div>
+    </div>
+   </div>
+   <div class="cards4">
+    <div class="cardcontent">
+      <img src="assests/location.png" >
+      <div class="text">
+        <p>Maldives</p>
+      </div>
+    </div>
+   </div>
+   <div class="cards5">
+    <div class="cardcontent">
+      <img src="assests/location.png" >
+      <div class="text">
+        <p>Maldives</p>
+      </div>
+    </div>
+   </div>
+   <div class="cards6">
+    <div class="cardcontent">
+      <img src="assests/location.png" >
+      <div class="text">
+        <p>Maldives</p>
+      </div>
+    </div>
+   </div>
+   <div class="cards7">
+    <div class="cardcontent">
+      <img src="assests/location.png" >
+      <div class="text">
+        <p>Maldives</p>
+      </div>
+    </div>
+   </div>
+</div>
     <div class="submenu">
       <div class=" submenu-list " id="Hotels" onclick="setstate('hotelContainer')">
         <img src="assests/hotel.png" alt="" />
