--- a/Implementataion/Pages/excursion.html
+++ b/Implementataion/Pages/excursion.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
 
-            <div  id="voyage" class="mainbody">
+            <div id="voyage" class="mainbody">
                 <div class="text">
                     <p> <span>Take off with us into</span> new adventure!</p>
                     <p>Fly with us<span> Discover the World!</span> </p>
@@ -96,12 +96,9 @@
                                             <p>From</p>
                                             <img src="../assests/take-offe.png" alt="">
                                         </div>
-                                        <select id="mean" onchange="selectTransportation(this.value)">
+                                        <select id="selectfrom" onchange="">
                                             <option disabled selected value="">Select an option</option>
-                                            <option value="car">Car Reservation</option>
-                                            <option value="bus">Bus Reservation</option>
-                                            <option value="train">Train Reservation</option>
-                                            <option value="flight">Flight Reservation</option>
+
                                         </select>
                                     </div>
                                     <div class="section">
@@ -110,12 +107,9 @@
                                             <p>TO</p>
                                             <img src="../assests/landing.png" alt="">
                                         </div>
-                                        <select id="mean" onchange="selectTransportation(this.value)">
+                                        <select id="selectto" onchange="">
                                             <option disabled selected value="">Select an option</option>
-                                            <option value="car">Car Reservation</option>
-                                            <option value="bus">Bus Reservation</option>
-                                            <option value="train">Train Reservation</option>
-                                            <option value="flight">Flight Reservation</option>
+
                                         </select>
                                     </div>
                                     <div class="section">
@@ -130,29 +124,26 @@
                                 </div>
                                 <div class="card-content">
                                     <div class="section">
-
-                                        <div class="card-text">
-                                            <p>Seats</p>
-                                            <img class="card-img" src="../assests/airline.png"
-                                                style="height: 35px; width: 35px;">
-                                        </div>
-                                        <input type="number" placeholder="Enter number of seats">
-                                    </div>
-                                    <div class="section">
-
                                         <div class="card-text">
                                             <p>Airline</p>
                                             <img class="card-img" src="../assests/airline.png"
                                                 style="height: 35px; width: 35px;">
                                         </div>
-                                        <select id="mean" onchange="selectTransportation(this.value)">
+                                        <select id="selectairline" onchange="">
                                             <option disabled selected value="">Select an option</option>
-                                            <option value="car">Car Reservation</option>
-                                            <option value="bus">Bus Reservation</option>
-                                            <option value="train">Train Reservation</option>
-                                            <option value="flight">Flight Reservation</option>
                                         </select>
+                                        <p id="fare">fare</p>
                                     </div>
+                                    <div class="section">
+                                        <div class="card-text">
+                                            <p>Seats</p>
+                                            <img class="card-img" src="../assests/airline.png"
+                                                style="height: 35px; width: 35px;">
+                                        </div>
+                                        <input id="seats" type="number" placeholder="Enter number of seats" min="0" value="1" inputmode="numeric">
+
+                                    </div>
+
                                     <div class="section">
 
                                         <div class="card-text">
@@ -160,12 +151,8 @@
                                             <img class="card-img" src="../assests/clock.png"
                                                 style="height: 35px; width: 35px;">
                                         </div>
-                                        <select id="mean" onchange="selectTransportation(this.value)">
+                                        <select id="flight-time" onchange="">
                                             <option disabled selected value="">Select an option</option>
-                                            <option value="car">Car Reservation</option>
-                                            <option value="bus">Bus Reservation</option>
-                                            <option value="train">Train Reservation</option>
-                                            <option value="flight">Flight Reservation</option>
                                         </select>
                                     </div>
                                 </div>
@@ -425,35 +412,36 @@
                         </div>
                     </div>
                 </div>
-</div>
-                <div  id="lodgeing" class="mainbody">
-                    <div class="text">
-                               <h1>lodgeing</h1>
-                            <div class="btn">
-                                <button id="nextBtn" onclick="state()">Next</button>
-                            </div>
-                        </div>
+            </div>
+            <div id="lodgeing" class="mainbody">
+                <div class="text">
+                    <h1>lodgeing</h1>
+                    <div class="btn">
+                        <button id="nextBtn" onclick="state()">Next</button>
                     </div>
+                </div>
+            </div>
 
-                <div  id="moving" class="mainbody">
-                    <div class="text">
-                               <h1>moving means</h1>
-                            <div class="btn">
-                                <button id="nextBtn" onclick="state()">Next</button>
-                            </div>
-                        </div>
+            <div id="moving" class="mainbody">
+                <div class="text">
+                    <h1>moving means</h1>
+                    <div class="btn">
+                        <button id="nextBtn" onclick="state()">Next</button>
                     </div>
+                </div>
+            </div>
 
-                    <div  id="calculation" class="mainbody">
-                        <div class="text">
-                                   <h1>Calculation Charge</h1>
-                                <div class="btn">
-                                    <button id="nextBtn" onclick="state()">Next</button>
-                                </div>
-                            </div>
-                        </div>
-            
-                
+            <div id="calculation" class="mainbody">
+                <div class="text">
+                    <h1>Calculation Charge</h1>
+                    <div class="btn">
+                        <button id="nextBtn" onclick="state()">Next</button>
+                    </div>
+                </div>
+            </div>
+
+
 </body>
+
 </html>
 <script src="../Js/excursion.js"></script>
