--- a/Implementataion/index.html
+++ b/Implementataion/index.html
@@ -52,7 +52,7 @@
     <div class="cardcontent">
       <img src="assests/location.png" >
       <div class="text">
-        <p>Maldives</p>
+        <p>Dubai</p>
       </div>
     </div>
    </div>
@@ -61,7 +61,7 @@
     <div class="cardcontent">
       <img src="assests/location.png" >
       <div class="text">
-        <p>Maldives</p>
+        <p>Italy</p>
       </div>
     </div>
    </div>
@@ -69,7 +69,7 @@
     <div class="cardcontent">
       <img src="assests/location.png" >
       <div class="text">
-        <p>Maldives</p>
+        <p>Thailand</p>
       </div>
     </div>
    </div>
@@ -77,7 +77,7 @@
     <div class="cardcontent">
       <img src="assests/location.png" >
       <div class="text">
-        <p>Maldives</p>
+        <p>Greece</p>
       </div>
     </div>
    </div>
@@ -85,7 +85,7 @@
     <div class="cardcontent">
       <img src="assests/location.png" >
       <div class="text">
-        <p>Maldives</p>
+        <p>Greenland</p>
       </div>
     </div>
    </div>
@@ -93,7 +93,7 @@
     <div class="cardcontent">
       <img src="assests/location.png" >
       <div class="text">
-        <p>Maldives</p>
+        <p>Zimbabwae</p>
       </div>
     </div>
    </div>
@@ -101,7 +101,7 @@
     <div class="cardcontent">
       <img src="assests/location.png" >
       <div class="text">
-        <p>Maldives</p>
+        <p>Canada</p>
       </div>
     </div>
    </div>
