almostdone expt about us

--- a/Implementataion/Pages/excursion.html
+++ b/Implementataion/Pages/excursion.html
@@ -450,7 +450,7 @@
                                             <img class="card-img" src="../assests/rooms.png"
                                             style="height: 35px; width: 35px;">
                                         </div>
-                                        <input id="seats" type="number" placeholder="Enter number of Rooms" min="0" value="1" inputmode="numeric">
+                                        <input id=" " type="number" placeholder="Enter number of Rooms" min="0" value="1" inputmode="numeric">
                                     </div>
                                     <div class="section">
                                         <div class="card-text">
