project almost done

--- a/Implementataion/index.html
+++ b/Implementataion/index.html
@@ -25,7 +25,7 @@
         <p onclick="toExcursion()">Excursion</p>
         <p>Reviews</p>
         <p onclick="toContact()">Contact</p>
-        <p>About</p>
+        <p onclick="toAbout()">About</p>
       </div>
       <div class="signup">
         <button class="btn" onclick="login_btn()">Login</button>
